--- a/css/styles.css
+++ b/css/styles.css
@@ -35,9 +35,48 @@ footer{
 }
 
 /* --------------------------------- header --------------------------------- */
+.header{
+    
+}
+
+.header__wrap{
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    max-width: var(--desktop);
+}
+
 .header__info{
     background: var(--primary-second);
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
 }
+
+.header__info-pin a{    
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+    align-items: center;
+    gap: 10px;
+}
+
+.header__info-pin p{
+    color: var(--primary);
+    font-family: var(--literal);
+    font-size: 16px;
+    font-weight: 100;
+}
+
+.header__info-pin p span{
+    color: var(--green);
+    font-weight: 600;
+}
+
 
 
 /* --------------------------------- content -------------------------------- */
@@ -68,16 +107,54 @@ footer{
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    gap: 20px;
+    gap: 40px;
 }
 
 .main-container__content h1{
-
+    color: var(--primary);
+    font-family: var(--literal);
+    font-size: 6rem;
+    font-weight: 600;
+    text-align: center;
 }
 
+.main-container__ads{
+    width: 100%;
+    padding: 100px 40px 115px;
+    max-width: var(--desktop);
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    flex-wrap: wrap;
+    gap: 40px;
+}
 
+.ads__item{
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
+    gap: 10px;
+}
 
+.ads__item img{
+    max-width: 130px;
+    width: 100%;
+    height: 130px;
+    object-fit: contain;
+}
 
+.ads__item p{
+    color: var(--primary-second);
+    font-family: var(--literal);
+    font-size: 18px;
+    font-weight: 600;
+    text-align: center;
+}
+.ads__item p span{
+    color: var(--green);
+}
 
 
 
