--- a/css/styles.css
+++ b/css/styles.css
@@ -1,20 +1,20 @@
-@import url('./fonts.css');
-@import url('./variables.css');
+@import url("./fonts.css");
+@import url("./variables.css");
 
-*{
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
 
-body{
-    font-family: 'Roboto', sans-serif;
+body {
+    font-family: "Roboto", sans-serif;
     font-size: 16px;
     font-weight: 400;
     color: var(--neutral);
 }
 /* xvaadgfdgsdgdsf */
-#main{
+#main {
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
@@ -26,7 +26,7 @@ body{
 
 header,
 .main-container,
-footer{
+footer {
     width: 100%;
     display: flex;
     flex-direction: column;
@@ -35,20 +35,17 @@ footer{
 }
 
 /* --------------------------------- header --------------------------------- */
-.header{
-    
-}
-
-.header__wrap{
+.header__wrap {
     width: 100%;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
     max-width: var(--desktop);
+    padding: 0 40px;
 }
 
-.header__info{
+.header__info {
     background: var(--primary-second);
     width: 100%;
     display: flex;
@@ -57,7 +54,7 @@ footer{
     align-items: center;
 }
 
-.header__info-pin a{    
+.header__info-pin a {
     display: flex;
     flex-direction: row;
     justify-content: flex-start;
@@ -65,39 +62,144 @@ footer{
     gap: 10px;
 }
 
-.header__info-pin p{
+.header__info-pin p {
     color: var(--primary);
     font-family: var(--literal);
     font-size: 16px;
     font-weight: 100;
 }
 
-.header__info-pin p span{
+.header__info-pin p span {
     color: var(--green);
     font-weight: 600;
 }
 
+.header__info-whatsapp {
+    position: relative;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+    padding: 15px 15px 5px 20px;
+    height: 100%;
+    background: var(--primary-third);
+}
 
+.header__info-whatsapp span{
+    max-width: 14px;
+    width: 14px;
+    height: 14px;
+}
+
+.header__info-whatsapp span img{
+    width: 100%;
+    height: 100%;
+    object-fit: contain;
+}
+
+.info-whatsapp__name {
+    position: absolute;
+    top: 3px;
+    left: 45px;
+    color: var(--primary);
+    font-family: var(--literal);
+    font-size: 10px;
+    font-weight: 600;
+    text-transform: uppercase;
+}
+
+.info-whatsapp__container{
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+    align-items: center;
+    gap: 13px;
+}
+
+.info-whatsapp__container a,
+.header__info-cart a{
+    color: var(--primary);
+    font-family: var(--literal);
+    font-size: 16px;
+    font-weight: 600;
+    text-transform: uppercase;
+    transition: all 0.3s ease;
+}
+
+.info-whatsapp__container a:hover{
+    color: var(--green);
+}
+
+.header__info-cart a{
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+    align-items: center;
+    gap: 15px;
+    text-transform: lowercase;
+}
+
+.header__menu{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    gap: 15px;
+    width: 100%;
+    max-width: var(--desktop);
+    padding: 12px 40px;
+}
+
+.logotype-wrap{
+    max-width: 105px;
+    width: 105px;
+    height: 85px;
+}
+.logotype-wrap img{
+    width: 100%;
+    height: 100%;
+    object-fit: contain;
+}
+
+.menu__item a{
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+    align-items: center;
+    gap: 10px;
+    color: var(--primary-second);
+    font-family: var(--literal);
+    font-size: 14px;
+    font-weight: 400;
+    text-transform: uppercase;
+    transition: all 0.3s ease;
+    letter-spacing: 1px;
+}
+
+.menu__item a:hover{
+    color: var(--green);
+}
 
 /* --------------------------------- content -------------------------------- */
-.main-container{
+.main-container {
     /* width: 100%; */
 }
 
-.main-container__banner{
+.main-container__banner {
     position: relative;
     width: 100%;
     height: auto;
     max-height: 700px;
 }
 
-.main-container__banner img{
+.main-container__banner img {
     width: 100%;
     height: 100%;
     object-fit: cover;
 }
 
-.main-container__content{
+.main-container__content {
     position: absolute;
     top: 0;
     left: 0;
@@ -110,7 +212,7 @@ footer{
     gap: 40px;
 }
 
-.main-container__content h1{
+.main-container__content h1 {
     color: var(--primary);
     font-family: var(--literal);
     font-size: 6rem;
@@ -118,7 +220,7 @@ footer{
     text-align: center;
 }
 
-.main-container__ads{
+.main-container__ads {
     width: 100%;
     padding: 100px 40px 115px;
     max-width: var(--desktop);
@@ -130,7 +232,7 @@ footer{
     gap: 40px;
 }
 
-.ads__item{
+.ads__item {
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
@@ -138,43 +240,35 @@ footer{
     gap: 10px;
 }
 
-.ads__item img{
+.ads__item img {
     max-width: 130px;
     width: 100%;
     height: 130px;
     object-fit: contain;
 }
 
-.ads__item p{
+.ads__item p {
     color: var(--primary-second);
     font-family: var(--literal);
     font-size: 18px;
     font-weight: 600;
     text-align: center;
 }
-.ads__item p span{
+.ads__item p span {
     color: var(--green);
 }
 
-
-
-
-
-
-
-
-
-.main-container__rules{
+.main-container__rules {
     width: 100%;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     padding: 60px 40px;
-    background: var(--green-fon); 
+    background: var(--green-fon);
 }
 
-.main-container__rules p{
+.main-container__rules p {
     color: var(--neutral-second);
     font-family: var(--literal);
     font-size: 16px;
@@ -183,13 +277,276 @@ footer{
     max-width: var(--desktop);
 }
 
+.main-container__steps-order{
+    position: relative;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 48px;
+    padding: 80px 40px 120px;
+}
+
+h2{
+    color: var(--primary-second);
+    font-family: var(--karton);
+    font-size: 24px;
+    font-weight: 400;
+    text-align: center;
+    text-transform: uppercase;
+}
+
+h2 span{
+    color: var(--green);
+}
+
+.steps-order__fon{
+    position: absolute;
+    top: -20%;
+    left: 0;
+    right: 0;
+    max-width: 100vw;
+    width: 100%;
+    height: calc(100% + 300px);
+}
+
+.steps-order__fon img{
+    width: 100%;
+    height: 100%;
+    object-fit: contain;
+}
+
+.steps-order__list{
+    max-width: var(--desktop);
+    width: 100%;
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(300px, 500px));
+    justify-content: space-between;
+    row-gap: 65px;
+    column-gap: 55px;
+}
+.steps-order__item{
+    max-width: max-content;
+}
+.steps-order__item span{
+    min-width: 140px;
+    width: 140px;
+    height: 140px;
+}
+.steps-order__item span img{
+    width: 100%;
+    height: 100%;
+    object-fit: contain;
+}
+
+.steps-order__item{
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+    align-items: center;
+    gap: 25px;
+}
+
+.steps-order__item .item-wrap{
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: flex-start;
+    gap: 25px;
+}
+
+.steps-order__item .item-wrap p{
+    color: var(--primary-second);
+    font-family: var(--literal);
+    font-size: 24px;
+    font-weight: 400;
+}
+.steps-order__item .item-wrap p:first-child{
+    color: var(--green);
+    font-weight: 600;
+    white-space: nowrap;
+}
+
+.main-container__gallery-wrap{
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    padding: 120px 40px;
+    background: var(--neutral-fon);
+}
+.main-container__foto-feedback{
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+    align-items: flex-start;
+    gap: 60px;
+    width: 100%;
+    max-width: var(--desktop);
+}
+
+.main-container__foto,
+.main-container__feedback{
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: flex-start;
+    gap: 30px;
+    width: max-content;
+}
+
+.foto__gallery{
+    display: grid;
+    grid-template-columns: repeat(2, 170px);
+    gap: 20px;
+    width: 100%;
+}
+
+.foto__gallery img{
+    max-width: 170px;
+    width: 170px;
+    height: 170px;
+    border-radius: 10px;
+}
+
+.feedback__list{
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: flex-start;
+    gap: 17px;
+    width: 100%;
+}
+
+.feedback__item{
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: flex-start;
+    gap: 10px;
+    width: 100%;
+    padding-bottom: 21px;
+    border-bottom: 1px solid var(--neutral-second);
+}
+
+.feedback__item:last-child{
+    border: none;
+}
+
+.feedback__item p{
+    color: var(--bordo-fon);
+    font-family: var(--literal);
+    font-size: 16px;
+    font-weight: 400;
+    letter-spacing: 1px;
+}
+
+.feedback__who{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: flex-start;
+    gap: 10px;
+    width: 100%;
+}
+.feedback__name{
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+    align-items: center;
+    flex-wrap: wrap;
+    max-width: 250px;
+    column-gap: 15px;  
+    row-gap: 8px;  
+}
+
+.feedback__name .surname{
+    color: var(--green);
+    font-family: var(--literal);
+    font-size: 16px;
+    font-weight: 600;
+    letter-spacing: 1px;
+}
+
+.feedback__name .date,
+.feedback__name .city{
+    color: var(--neutral);
+    font-family: var(--roboto);
+    font-size: 14px;
+    font-weight: 400;
+    letter-spacing: 1px;
+}
 
 /* --------------------------------- footer --------------------------------- */
-footer{
+footer {
+    padding: 0 40px;
     margin-top: auto;
     background: var(--primary-second);
 }
 
-.footer__copyright{
+.footer__menu{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    width: 100%;
+    max-width: var(--desktop);
+    padding: 33px 0;
+}
+
+.footer__menu a{
+    color: var(--primary);
+    font-family: var(--literal);
+    font-size: 16px;
+    font-weight: 400;
+    letter-spacing: 1px;
+}
+
+.footer__info{
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+    align-items: flex-start;
+    width: 100%;
+    gap: 80px;
+    max-width: var(--desktop);
+    padding: 30px 0 45px;
+    background: var(--primary-second);
+    border-top: 1px solid #A29BB4;
+    border-bottom: 1px solid #A29BB4;
+}
+
+.footer__copyright {
     padding: 22px 0;
+}
+
+.f-info__contacts{
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: flex-start;
+    gap: 17px;
+}
+
+.f-info__item a{
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+    align-items: center;
+    gap: 14px;
+}
+.f-info__item._active{
+    color: var(--green);
+    font-family: var(--literal);
+    font-size: 18px;
+    font-weight: 600;
+}
+.f-info__item a{
+    color: var(--primary);
+    font-family: var(--literal);
+    font-size: 16px;
+    font-weight: 400;
+    letter-spacing: 1px;
 }
