--- a/css/styles.css
+++ b/css/styles.css
@@ -81,8 +81,7 @@ footer {
     height: 100%;
 }
 
-.header__info-whatsapp a,
-.header__info-cart a {
+.header__info-whatsapp a{
     color: var(--primary);
     font-family: var(--literal);
     font-size: 16px;
@@ -93,15 +92,6 @@ footer {
 
 .header__info-whatsapp a:hover {
     color: var(--green);
-}
-
-.header__info-cart a {
-    display: flex;
-    flex-direction: row;
-    justify-content: flex-start;
-    align-items: center;
-    gap: 15px;
-    text-transform: lowercase;
 }
 
 .header__menu {
@@ -127,11 +117,6 @@ footer {
 }
 
 .menu__item a {
-    display: flex;
-    flex-direction: row;
-    justify-content: flex-start;
-    align-items: center;
-    gap: 10px;
     color: var(--primary-second);
     font-family: var(--literal);
     font-size: 14px;
@@ -278,7 +263,7 @@ h1 span.green {
 h2 {
     color: var(--primary-second);
     font-family: var(--karton);
-    font-size: 24px;
+    font-size: 28px;
     font-weight: 400;
     text-align: center;
     text-transform: uppercase;
@@ -296,6 +281,7 @@ h2 span {
     max-width: 100vw;
     width: 100%;
     height: calc(100% + 300px);
+    z-index: 1;
 }
 
 .steps-order__fon img {
@@ -312,14 +298,15 @@ h2 span {
     justify-content: space-between;
     row-gap: 65px;
     column-gap: 55px;
+    z-index: 2;
 }
 .steps-order__item {
     max-width: max-content;
 }
 .steps-order__item span {
-    min-width: 140px;
-    width: 140px;
-    height: 140px;
+    min-width: 120px;
+    width: 120px;
+    height: 120px;
 }
 .steps-order__item span img {
     width: 100%;
@@ -340,13 +327,13 @@ h2 span {
     flex-direction: column;
     justify-content: flex-start;
     align-items: flex-start;
-    gap: 25px;
+    gap: 15px;
 }
 
 .steps-order__item .item-wrap p {
     color: var(--primary-second);
     font-family: var(--literal);
-    font-size: 24px;
+    font-size: 18px;
     font-weight: 400;
 }
 .steps-order__item .item-wrap p:first-child {
@@ -507,11 +494,20 @@ footer {
 .footer__copyright {
     padding: 22px 0;
 }
+
 .footer__copyright p{
     color: var(--primary);
 }
 
-.f-info__contacts {
+.f-menu__item a{
+    transition: all 0.3s ease;
+}
+
+.f-menu__item a:hover {
+    color: var(--primary-third);
+}
+
+.f-info__contacts{
     display: flex;
     flex-direction: row;
     justify-content: space-evenly;
@@ -525,22 +521,19 @@ footer {
     flex-direction: row;
     justify-content: flex-start;
     align-items: center;
-    gap: 14px;
+    gap: 10px;
 }
 
-.f-info__item p,
-.f-info__item a {
+.f-info__item a,
+.f-info__item p{
     color: var(--primary);
     font-family: var(--literal);
     font-size: 16px;
     font-weight: 400;
     letter-spacing: 1px;
-}
-
-.f-menu__item a{
     transition: all 0.3s ease;
 }
 
-.f-menu__item a:hover {
-    color: var(--primary-third);
+.f-info__item a:hover{
+    color: var(--primary-second);
 }
